--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,13 +2,26 @@
 @import 'mixins/flex';
 @import 'mixins/helpers';
 
+ul {
+  padding: 0;
+
+  li {
+    list-style: none;
+  }
+}
+
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 header {
+  padding: 20px;
   border-bottom: 1px solid $light-grey;
 
   .main-logo {
     color: $blue;
     font-family: 'Shadows Into Light', cursive;
-    font-size: 1.5em;
+    font-size: 2em;
 
     img {
       width: 60px;
@@ -18,7 +31,7 @@ header {
   .main-logo,
   .navigation {
     display: inline-block;
-    padding: 0 0 0 20px;
+    margin-bottom: 0;
   }
 
   .navigation {
@@ -34,18 +47,20 @@ header {
       }
     }
 
-    .user {
-      img {
-        border-radius: 50%;
-        width: 40px;
-      }
+  }
+
+  // related to navigation and mobile navigation
+  .user {
+    img {
+      border-radius: 50%;
+      width: 40px;
     }
   }
 
   .mobile-navigation-icon {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 33px;
+    right: 25px;
     width: 50px;
     height: 30px;
     padding: 15px;
@@ -92,145 +107,154 @@ header {
 
   .mobile-navigation {
     display: none;
+    position: absolute;
+    width: 100%;
+    background: $white;
+    padding: 20px;
+    margin-top: 1px;
+    text-align: center;
+    box-shadow: 0px 2px 5px $darker-grey;
+
     li {
       display: block;
+      padding: 10px;
     }
   }
+}
 
-  .hero-animation {
-    background: $coral;
-    background: -webkit-linear-gradient(top left, $coral 0%, $pink 100%);
-    background: linear-gradient(to bottom right, $coral 0%, $pink 100%);
-    background-size: cover;
+.hero-animation {
+  background: $coral;
+  background: -webkit-linear-gradient(top left, $coral 0%, $pink 100%);
+  background: linear-gradient(to bottom right, $coral 0%, $pink 100%);
+  background-size: cover;
+  width: 100%;
+  min-height: 560px;
+  overflow: hidden;
+  position: relative;
+
+  .bg-bubbles {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    min-height: 560px;
-    overflow: hidden;
-    position: relative;
+    height: 100%;
+    z-index: 1;
 
-    .bg-bubbles {
+    li {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
+      list-style: none;
+      display: block;
+      width: 40px;
+      height: 40px;
+      background-color: rgba(255, 255, 255, 0.15);
+      bottom: -160px;
+      -webkit-animation: square 25s infinite;
+      animation: square 25s infinite;
+      -webkit-transition-timing-function: linear;
+      transition-timing-function: linear;
 
-      li {
-        position: absolute;
-        list-style: none;
-        display: block;
+      &:nth-child(1) {
+        left: 10%;
+      }
+      &:nth-child(2) {
+        left: 20%;
+        width: 80px;
+        height: 80px;
+        -webkit-animation-delay: 2s;
+                animation-delay: 2s;
+        -webkit-animation-duration: 17s;
+                animation-duration: 17s;
+      }
+      &:nth-child(3) {
+        left: 25%;
+        -webkit-animation-delay: 4s;
+                animation-delay: 4s;
+      }
+      &:nth-child(4) {
+        left: 40%;
+        width: 60px;
+        height: 60px;
+        -webkit-animation-duration: 22s;
+                animation-duration: 22s;
+        background-color: rgba(255, 255, 255, 0.25);
+      }
+      &:nth-child(5) {
+        left: 70%;
+      }
+      &:nth-child(6) {
+        left: 80%;
+        width: 120px;
+        height: 120px;
+        -webkit-animation-delay: 3s;
+                animation-delay: 3s;
+        background-color: rgba(255, 255, 255, 0.2);
+      }
+      &:nth-child(7) {
+        left: 32%;
+        width: 90px;
+        height: 90px;
+        -webkit-animation-delay: 7s;
+                animation-delay: 7s;
+      }
+      &:nth-child(8) {
+        left: 55%;
         width: 40px;
         height: 40px;
-        background-color: rgba(255, 255, 255, 0.15);
-        bottom: -160px;
-        -webkit-animation: square 25s infinite;
-        animation: square 25s infinite;
-        -webkit-transition-timing-function: linear;
-        transition-timing-function: linear;
+        -webkit-animation-delay: 15s;
+                animation-delay: 15s;
+        -webkit-animation-duration: 40s;
+                animation-duration: 40s;
+      }
+      &:nth-child(9) {
+        left: 25%;
+        width: 30px;
+        height: 30px;
+        -webkit-animation-delay: 2s;
+                animation-delay: 2s;
+        -webkit-animation-duration: 40s;
+                animation-duration: 40s;
+        background-color: rgba(255, 255, 255, 0.3);
+      }
+      &:nth-child(10) {
+        left: 90%;
+        width: 100px;
+        height: 100px;
+        -webkit-animation-delay: 11s;
+                animation-delay: 11s;
+      }
 
-        &:nth-child(1) {
-          left: 10%;
+      @-webkit-keyframes square {
+        0% {
+          -webkit-transform: translateY(0);
+                  transform: translateY(0);
         }
-        &:nth-child(2) {
-          left: 20%;
-          width: 80px;
-          height: 80px;
-          -webkit-animation-delay: 2s;
-                  animation-delay: 2s;
-          -webkit-animation-duration: 17s;
-                  animation-duration: 17s;
+        100% {
+          -webkit-transform: translateY(-700px) rotate(600deg);
+                  transform: translateY(-700px) rotate(600deg);
         }
-        &:nth-child(3) {
-          left: 25%;
-          -webkit-animation-delay: 4s;
-                  animation-delay: 4s;
+      }
+      @keyframes square {
+        0% {
+          -webkit-transform: translateY(0);
+                  transform: translateY(0);
         }
-        &:nth-child(4) {
-          left: 40%;
-          width: 60px;
-          height: 60px;
-          -webkit-animation-duration: 22s;
-                  animation-duration: 22s;
-          background-color: rgba(255, 255, 255, 0.25);
-        }
-        &:nth-child(5) {
-          left: 70%;
-        }
-        &:nth-child(6) {
-          left: 80%;
-          width: 120px;
-          height: 120px;
-          -webkit-animation-delay: 3s;
-                  animation-delay: 3s;
-          background-color: rgba(255, 255, 255, 0.2);
-        }
-        &:nth-child(7) {
-          left: 32%;
-          width: 90px;
-          height: 90px;
-          -webkit-animation-delay: 7s;
-                  animation-delay: 7s;
-        }
-        &:nth-child(8) {
-          left: 55%;
-          width: 40px;
-          height: 40px;
-          -webkit-animation-delay: 15s;
-                  animation-delay: 15s;
-          -webkit-animation-duration: 40s;
-                  animation-duration: 40s;
-        }
-        &:nth-child(9) {
-          left: 25%;
-          width: 30px;
-          height: 30px;
-          -webkit-animation-delay: 2s;
-                  animation-delay: 2s;
-          -webkit-animation-duration: 40s;
-                  animation-duration: 40s;
-          background-color: rgba(255, 255, 255, 0.3);
-        }
-        &:nth-child(10) {
-          left: 90%;
-          width: 100px;
-          height: 100px;
-          -webkit-animation-delay: 11s;
-                  animation-delay: 11s;
-        }
-
-        @-webkit-keyframes square {
-          0% {
-            -webkit-transform: translateY(0);
-                    transform: translateY(0);
-          }
-          100% {
-            -webkit-transform: translateY(-700px) rotate(600deg);
-                    transform: translateY(-700px) rotate(600deg);
-          }
-        }
-        @keyframes square {
-          0% {
-            -webkit-transform: translateY(0);
-                    transform: translateY(0);
-          }
-          100% {
-            -webkit-transform: translateY(-700px) rotate(600deg);
-                    transform: translateY(-700px) rotate(600deg);
-          }
+        100% {
+          -webkit-transform: translateY(-700px) rotate(600deg);
+                  transform: translateY(-700px) rotate(600deg);
         }
       }
     }
+  }
 
-    .hero-text {
-      position: absolute;
-      color: white;
-      font-style: italic;
-      width: 50%;
-      text-align: center;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+  .hero-text {
+    position: absolute;
+    color: white;
+    font-style: italic;
+    width: 50%;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -291,4 +315,8 @@ footer {
   border-top: 1px solid $light-grey;
   padding: 20px;
   color: $blue;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  background: $dark-green-blue;
 }
