--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -5,13 +5,48 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Fjalla+One|Roboto+Condensed' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 </head>
 
 <body>
+  <header>
+    <div class="main-logo">
+      <span>Diamond <img src="<%= asset_path( 'diamond-icon.png' ) %>" /> Quizo</span>
+    </div>
+    <ul class="navigation hidden-xs">
+      <% if user_signed_in? %>
+        <li class="user">
+          <a href="/user_info/<%= current_user.id %>/show_info">
+            <img src="<%= current_user.avatar_url %>" alt="">
+            <span><%= current_user.name %></span>
+          </a>
+        </li>
+        <li><a href="/questions/new">Submit Trivia</a></li>
+        <li><a href="/categories">Browse Quizes</a></li>
+        <li><a href="/">Home</a></li>
+        <li>
+          <a href="/user_log_out_route/sign_out">Log out</a>
+        </li>
+      <% else %>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Questions</a></li>
+        <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
+      <% end %>
+    </ul>
+    <ul class="mobile-navigation">
+      <%= render '/partials/mobile_navigation' %>
+    </ul>
+    <div class="visible-xs mobile-navigation-icon">
+      <span></span>
+    </div>
+  </header>
   <div class="body-div">
     <%= yield %>
   </div>
+  <footer>
+    &copy; Diamond Quizo team, 2016
+  </footer>
 </body>
 
 <form action=<%=destroy_user_session_path%> method="delete" class="log-out-form">
