fix searching and form processing

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -42,6 +42,16 @@
     </div>
   </header>
   <div class="body-div">
+    <% if flash[:notice] %>
+      <div class="flash" style="background-color:red;color:white">
+        <%= flash[:notice] %>
+      </div>
+      <script>
+        setTimeout(function(){
+          $(".flash").fadeOut('300', function() {});
+        }, 4000);
+      </script>
+    <% end %>
     <%= yield %>
   </div>
   <footer>
