--- a/app/views/manage/admins/question_crud.html.erb
+++ b/app/views/manage/admins/question_crud.html.erb
@@ -2,6 +2,12 @@
   questions pending
 </h1>
 <ul>
+
+<form action="/manage/questions/search/filter">
+  question<input name="question" type="text">
+  <input type="submit" value="search">
+  <input type="hidden" name="from" value="question_crud">
+</form>
 <li class="row">
   <div class="ro question"><b> Question </b></div>
   <div class="ro status"><b> Status </b></div>
