center the notice text

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -43,7 +43,7 @@
   </header>
   <div class="body-div">
     <% if flash[:notice] %>
-      <div class="flash" style="background-color:red;color:white">
+      <div class="flash" style="background-color:red;color:white;text-align:center">
         <%= flash[:notice] %>
       </div>
       <script>
