--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
  }
 
  .admin-box {
-    background-color: yellow;
+    background-color: white;
     top: 0%;
     position: fixed;
     width: 100%;
