--- a/app/views/users/front_page.html.erb
+++ b/app/views/users/front_page.html.erb
@@ -12,6 +12,9 @@
     <li></li>
   </ul>
   <h2 class="hero-text">This site is for sharing great trivia questions about our favorite popular narratives.</h2>
+  <div class="fblogin">
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+  </div>
 </div>
 <main>
   <h2 class="about-title">What's Great About This App</h2>
