change home page hero image

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -38,7 +38,7 @@
   <% end %>
 <% end %>
     <div class="main-logo">
-      <span>Diamond <img src="<%= asset_path( 'diamond-icon.png' ) %>" /> Quizo</span>
+      <a href="/"><img src="<%= asset_path( 'diamond-icon.png' ) %>" /></a>
     </div>
     <ul class="navigation hidden-xs">
       <% if user_signed_in? %>
