--- a/app/views/users/front_page.html.erb
+++ b/app/views/users/front_page.html.erb
@@ -1,17 +1,5 @@
-<div class="hero-animation">
-  <ul class="bg-bubbles">
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-  <h2 class="hero-text">This site is for sharing great trivia questions about our favorite popular narratives.</h2>
+<div class="hero-image">
+  <h1 class="hero-text">This site is for sharing great trivia questions about our favorite popular narratives.</h1>
 </div>
 <main>
   <h2 class="about-title">What's Great About This App</h2>
