--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -16,10 +16,14 @@ body {
 
 header {
   padding: 20px;
-  border-bottom: 1px solid $light-grey;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  font-size: 18px;
 
   .main-logo {
-    color: $blue;
+    color: $white;
     font-family: 'Shadows Into Light', cursive;
     font-size: 2em;
 
@@ -43,7 +47,7 @@ header {
       padding: 0 10px;
 
       a {
-        color: $blue;
+        color: $white;
       }
     }
 
@@ -77,7 +81,7 @@ header {
       position: absolute;
       display: block;
       content: '';
-      background: $blue;
+      background: $white;
 
     }
     span::before {
@@ -114,11 +118,52 @@ header {
     margin-top: 1px;
     text-align: center;
     box-shadow: 0px 2px 5px $darker-grey;
+    left: 0;
 
     li {
       display: block;
       padding: 10px;
     }
+  }
+}
+
+.hero-image {
+  background: url('game-background.jpeg') no-repeat center left fixed;
+  background-size: cover;
+  position: relative;
+  min-height: 100vh;
+
+  &::after {
+    content: '';
+    background: $black;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    top: 0;
+  }
+}
+
+.hero-text {
+  position: absolute;
+  color: white;
+  font-style: italic;
+  width: 90%;
+  text-align: center;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 32px;
+  z-index: 1;
+
+  @media(min-width: 767px) {
+    width: 75%;
+    top: 45%;
+    font-size: 42px;
+  }
+
+  @media(min-width: 1280px) {
+    width: 50%;
   }
 }
 
@@ -244,17 +289,6 @@ header {
         }
       }
     }
-  }
-
-  .hero-text {
-    position: absolute;
-    color: white;
-    font-style: italic;
-    width: 50%;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
