--- a/app/views/users/front_page.html.erb
+++ b/app/views/users/front_page.html.erb
@@ -7,21 +7,21 @@
     <li class="create-questions">
       <figure>
         <!-- this should be img tag later -->
-        <div class="about-image"></div>
+        <i class="about-ask"></i>
         <figcaption>Create great questions to challenge other users</figcaption>
       </figure>
     </li>
     <li class="take-quizes">
       <figure>
         <!-- this should be img tag later -->
-        <div class="about-image"></div>
+        <i class="about-quiz"></i>
         <figcaption>Take quizzes based on questions created by other users</figcaption>
       </figure>
     </li>
     <li class="share-scores">
       <figure>
         <!-- this should be img tag later -->
-        <div class="about-image"></div>
+        <i class="about-rank"></i>
         <figcaption>Share your scores and see how your friends do on their own quizzes</figcaption>
       </figure>
     </li>
