--- a/app/views/users/front_page.html.erb
+++ b/app/views/users/front_page.html.erb
@@ -1,5 +1,6 @@
 <div class="hero-image">
   <h1 class="hero-text">This site is for sharing great trivia questions about our favorite popular narratives.</h1>
+  <%#= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => "fblogin" %>
 </div>
 <main>
   <h2 class="about-title">What's Great About This App</h2>
