--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -150,11 +150,10 @@ header {
     @include transition(all 0.3s ease-in-out);
     background: $white;
     padding: 15px;
+    font-size: 25pt;
     border-radius: 10px;
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    z-index: 10;
+    position: relative;
+    z-index: 1;
 
     &:hover {
       background: #A6CED5;
