--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,3 +1,42 @@
+<html>
+<head>
+  <title>Quizio</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Fjalla+One|Roboto+Condensed' rel='stylesheet' type='text/css'>
+  <%= csrf_meta_tags %>
+</head>
+
+<header>
+  <% if current_user %>
+ <% if current_user.admin? %>
+  <div class="admin-box">
+    <ul class="admin-links">
+      <li>
+        <a href="/manage/questions">question pool</a>
+      |</li>
+      <li>
+        <a href="/manage/admins/question_crud">
+          pending questions
+        </a>
+      |</li>
+      <li>
+        <a href="/manage/admins/user_crud">
+          users control
+        </a>
+      |</li>
+      <li>
+        <a href="/manage/admins/dashboard">
+          admin dashboard
+        </a>
+      </li>
+    </ul>
+  </div>
+  <% end %>
+<% end %>
+</header>
+
 <a href="/manage/admins/user_crud">Manage users</a>|
 <a href="/manage/admins/question_crud">Manage Questions</a>
 
@@ -5,3 +44,5 @@
     <a href="/user_log_out_route/sign_out">Log out</a>
   </div><br>
 <%= yield %>
+
+</html>
