--- a/app/views/users/front_page.html.erb
+++ b/app/views/users/front_page.html.erb
@@ -1,10 +1,16 @@
 <div class="hero-image">
-  <h1 class="hero-text">This site is for sharing great trivia questions about our favorite popular narratives.</h1>
-  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => "fblogin" %>
+  <div class="fb-splash">
+    <h1 class="hero-text">
+      Make trivia, play trivia and challenge your friends on facebook!
+      <br>
+      <hr>
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => "fblogin" %>
+    </h1>
+  </div>
 
 </div>
 <main>
-  <h2 class="about-title">What's Great About This App</h2>
+  <h2 class="about-title">How does this work?</h2>
   <ul class="about-app">
     <li class="create-questions">
       <figure>
