clean up the front page and question submission form

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
-<h3>This page will have some nice image on the category and a link to take its quiz</h3>
+<h3><%=@category.name.capitalize %>
+</h3>
 
-<%=@category.name%>
 
 <div class="quiz-box">
     <form id="quiz-form" action="/categories/<%= @category.id %>/tabulate_scores">
@@ -19,7 +19,13 @@
         </div>
       <% end %>
     </form>
-    <a href="#" id="submit-button">submit</a>
+
+    <hr>
+    <a href="#" id="submit-button">
+      <button>
+        submit
+      </button>
+    </a>
 </div>
 <script>
   var numbers = [0,1,2,3,4,5,6,7,8,9]
