moved assets to correct folder

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -130,7 +130,7 @@ header {
 }
 
 .hero-image {
-  background: url('sf-animated.png') no-repeat top center fixed;
+  background: url('/images/sf-animated.png') no-repeat top center fixed;
   background-size: cover;
   position: relative;
   height: 100vh;
