small formatting and links

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,8 +1,12 @@
 
 .question-box {
     margin: 2px;
-    background-color: #DBE7E8;
+    background-color: #4A7F82;
+    color: white;
     padding: 2%;
     width: 70%;
     border-radius: 10px;
+    a {
+      color: white
+    }
     }
