--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -53,11 +53,11 @@
       </script>
     <% end %>
     <div class="content" style="padding-left:10%; padding-right:10%;padding-bottom: 10%">
-      <%= yield %>
+        <%= yield %>
     </div>
   </div>
 </body>
-  <footer>
+  <footer style="position:relative">
     &copy; Diamond Quizo team, 2016
   </footer>
 
