finish score screen

--- a/app/views/categories/score.html.erb
+++ b/app/views/categories/score.html.erb
@@ -1,6 +1,25 @@
-score.html.erb
+
+<div class="score-container">
+
+<img src="<%= @user.avatar_url %>" alt="">
+<h3>
+<%= @user.name %>, you have scored <%= @score.score %>
+</h3>
+
+<h5>Tell your friends on facebook!</h5>
+
+</div>
 
 
-players score here
-
-<%= @score.score %>
+<style>
+  .score-container {
+    padding: 5%;
+    text-align: center;
+    background-color: rgba(0, 255, 163, 0.23);
+    position: relative;
+    top: 3%;
+    margin-top: 4%;
+    width: 75%;
+    margin: 4% auto;
+  }
+</style>
