--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -332,7 +332,7 @@ main {
         max-width: 230px;
 
         .about-ask {
-          background: url('svg/ask.svg') no-repeat;
+          background: url('/images/svg/ask.svg') no-repeat;
           background-size: cover;
           display: inline-block;
           width: 150px;
@@ -340,7 +340,7 @@ main {
         }
 
         .about-quiz {
-          background: url('svg/quiz.svg') no-repeat;
+          background: url('/images/svg/quiz.svg') no-repeat;
           background-size: cover;
           display: inline-block;
           width: 150px;
@@ -348,7 +348,7 @@ main {
         }
 
         .about-rank {
-          background: url('svg/rank.svg') no-repeat;
+          background: url('/images/svg/rank.svg') no-repeat;
           background-size: cover;
           display: inline-block;
           width: 150px;
