better way to control and edit categories

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -43,6 +43,9 @@
   <div style="float:right">
     <a href="/user_log_out_route/sign_out">Log out</a>
   </div><br>
-<%= yield %>
+  <div style="margin: 10%">
+    <%= yield %>
+  </div>
+
 
 </html>
