--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -85,7 +85,7 @@
 		</div>
 		<div class="form-section">
 			<%= f.label :citation, "Citation", class: "question-form-title"%>
-			<%= f.text_field :citation, :placeholder => "(book, page number) eg (Half Blood Prince, pg.596)", class: "question-form-control form-control"%>
+			<%= f.text_field :citation, :placeholder => "Season and Episode", class: "question-form-control form-control"%>
 		</div>
 		<div class="form-section"></div>
 		<%= f.submit "Submit Question", class: "submit-button"%>
@@ -99,6 +99,6 @@
 </div>
 <div class="contact-us">
 	<div class="question-submition-container">
-		Contact us: <a href="mailto:something@gmail.com">diamondteam@gmail.com</a>
+		Contact us: <a href="mailto:soon@gmail.com">soon@gmail.com</a>
 	</div>
 </div>
