--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,7 @@
 <h3><%=@category.name.capitalize %>
 </h3>
 
+<div class="cat-banner" style="background:url(<%= @category.image_url %>)">
 
 <div class="quiz-box">
     <form id="quiz-form" action="/categories/<%= @category.id %>/tabulate_scores">
@@ -20,7 +21,7 @@
               <input type="radio" id="qtn<%= idx %>" name="score[ans<%= idx %>]" value=<%= p[:val] %>>   <%= p[:show] %> <br>
             <% end %>
             <hr>
-<a href="/questions/<%= q.id %>">Discuss this peice of trivia ...</a>
+          <a href="/questions/<%= q.id %>">Discuss this peice of trivia ...</a>
         </div>
       <% end %>
     </form>
@@ -32,6 +33,21 @@
       </button>
     </a>
 </div>
+
+
+</div>
+
+<style>
+  .cat-banner {
+    background-color: red;
+    position: relative;
+    height: 100%;
+    z-index: 0;
+    width: 100%;
+    top: 0%;
+    padding: 10%;
+  }
+</style>
 <script>
   var numbers = [0,1,2,3,4,5,6,7,8,9]
   var questions = []
