better category display

--- a/app/views/manage/categories/show.html.erb
+++ b/app/views/manage/categories/show.html.erb
@@ -13,6 +13,10 @@
     <label for="image_url">Image</label>
     <input type="text" name="edit[image_url]" value="<%= @category.image_url %>">
   </li>
+  <li>
+    <label for="image_url">Thumbnail</label>
+    <input type="text" name="edit[thumbnail_url]" value="<%= @category.thumbnail_url %>">
+  </li>
    <li>
     <label for="ranking[a]">Top Scorer rank</label>
     <input type="text" name="rankings[a]" value="<%= @ranks['a'] %>">
