--- a/app/views/categories/private_show.html.erb
+++ b/app/views/categories/private_show.html.erb
@@ -51,7 +51,7 @@
 
 
 <script>
-  $('body').on('click', '."#q-form-sub"', function(event) {
+  $('body').on('click', "#q-form-sub", function(event) {
     event.preventDefault();
     $("form#new_question").trigger('submit');
   });
