--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 
-<h2>Current categories</h2>
+<h2>Select category</h2>
 <div class="cat-box-holder">
 
   <% @categories.each do |individual_category|%>
