--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -57,8 +57,8 @@
 
 <div class="question-submition-form">
 
-<h2>Current categories</h2>
-<div class="cat-box-holder">
+<h2 style="text-align:center">Select category for review</h2>
+<div class="cat-box-holder"style="text-align:center">
 
   <% Category.all.each do |individual_category|%>
   <a href="/categories/<%= individual_category.id %>/private_show">
@@ -67,8 +67,9 @@
     </div>
   </a>
   <%end%>
-<%= link_to "Submit a Question for Review", new_question_path%>
-
+<br>
+<h2 style="text-align:center">Or submit question below	</h2>
+<br>
 <script>
 $("body").on('mouseover', '.cate-box', function(event) {
   event.preventDefault();
